--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: doctor-know
-version: 2
+version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
@@ -21,3 +21,6 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
+
+- name: ssl
+  version: latest
